# AI-VIBE-CLI-PYTHON

./: .env  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  DEVELOPER-GUIDE.md  OPERATIONS-GUIDE.md  PROJECT-DOCS.md  README.md  UPGRADE-PLAN.md  docker-compose.yml  friday  index.html  pyproject.toml  requirements.txt  run.sh  run_upgrade.py
.claude/workflows/: upgrade.md
.github/workflows/: publish.yml  test.yml
.vibe/: vibe.db-shm  vibe.db-wal
client/: llm_client.py
docker/: Dockerfile.api
docs/: ARCHITECTURE.md  BEST-PRACTICES.md  CHANGELOG.md  CICD.md  CLAUDE.md  COMMANDS.md  CONTRIBUTING.md  FEATURE-GUIDE.md  IMPLEMENTATION-NOTES-command-integration.md  IMPLEMENTATION-PLAN.md  MCP-SERVERS.md  PHASE1_IMPLEMENTATION.md  PROJECT_AUDIT.md  PROJECT_AUDIT_v2_ENTERPRISE_PLUSPLUS.md  README.md  SECURITY.md  SESSION-MANAGEMENT.md  TESTING.md  UPGRADE-v0.2.0.md  USER-GUIDE.md  WORKFLOWS.md
docs/archive/: AUTONOMOUS-MODE.md  CHANGELOG.md  CLAUDE.md  DEVELOPER-GUIDE.md  INSTALLATION.md  README.md  TECH-STACK.md  UPGRADE-v0.1.0.md  UPGRADE-v0.3.0.md  USER-GUIDE.md
docs/audit/: architecture_audit.md  bug_audit.md  code_quality_audit.md  database_audit.md  dependency_audit.md  documentation_audit.md  infrastructure_audit.md  performance_audit.md  ui_ux_audit.md
friday_ai/: __init__.py  __main__.py  main.py
friday_ai/agent/: agent.py  autonomous_loop.py  persistence.py  repo_map.py  safety_manager.py  session.py  session_manager.py  session_metrics.py  tool_orchestrator.py
friday_ai/agent/autonomous/: __init__.py  git_manager.py  goals.py  quality_manager.py  self_healing.py
friday_ai/agent/swarm/: __init__.py
friday_ai/api/: __init__.py  __main__.py  dependencies.py  exceptions.py  server.py
friday_ai/api/models/: __init__.py  requests.py  responses.py
friday_ai/api/routers/: __init__.py  health.py  runs.py  sessions.py  tools.py
friday_ai/api/services/: __init__.py  session_service.py
friday_ai/auth/: __init__.py  api_keys.py
friday_ai/autonomous/: circuit_breaker.py  response_analyzer.py  status.py
friday_ai/cache/: __init__.py  cache.py
friday_ai/claude_integration/: __init__.py  agent_loader.py  command_mapper.py  context.py  rules_engine.py  skills_manager.py  utils.py  workflow_engine.py
friday_ai/claude_integration/skills/: __init__.py  installer.py  registry.py  remote_client.py
friday_ai/cli/: claude.py  commands.py
friday_ai/client/: __init__.py  llm_client.py  llm_router.py  multi_provider.py  response.py
friday_ai/client/providers/: __init__.py  anthropic.py  base.py  google.py  groq.py  ollama.py  openai.py
friday_ai/config/: config.py
friday_ai/context/: __init__.py  compaction.py  manager.py  strategies.py
friday_ai/database/: __init__.py  memory_backend.py  pool.py  redis_backend.py
friday_ai/devops/: __init__.py  kubernetes.py
friday_ai/events/: event_bus.py
friday_ai/intelligence/: __init__.py  embeddings.py  rag.py
friday_ai/mcp/: __init__.py  server.py
friday_ai/metrics/: exporter.py
friday_ai/monitoring/: __init__.py  dashboard.py
friday_ai/observability/: __init__.py  metrics.py
friday_ai/plugins/: manager.py
friday_ai/prompts/: system.py
friday_ai/ratelimit/: __init__.py  middleware.py
friday_ai/resilience/: __init__.py  health_checks.py  retry.py
friday_ai/scheduler/: scheduler.py
friday_ai/security/: __init__.py  audit_logger.py  secret_manager.py  validators.py
friday_ai/streaming/: __init__.py  response.py
friday_ai/tools/: base.py  registry.py  validation.py
friday_ai/tools/builtin/: __init__.py  database.py  docker.py  git.py  glob.py  http_client.py  http_request.py  list_dir.py  memory.py  rag_index.py  security_audit.py  shell.py  todo.py  web_fetch.py  web_search.py  write_file.py
friday_ai/tools/mcp/: __init__.py  mcp_installer.py  mcp_registry.py
friday_ai/ui/: __init__.py  tui.py  voice.py
friday_ai/utils/: errors.py  paths.py  shared_context.py
friday_ai/utils/exceptions/: __init__.py  base.py  config.py  network.py  resilience.py  resource.py  security.py  session.py  tools.py
friday_ai/workflow/: __init__.py  executor.py
tests/: run_autonomous_mode_tests.py  test_agent_persistence.py  test_agent_refactor.py  test_all_tools.py  test_auth_api_keys.py  test_cache.py  test_context_compaction.py  test_context_manager.py  test_database_security.py  test_embeddings.py  test_hooks_system.py  test_llm_router.py  test_mcp.py  test_multi_provider.py  test_new_tools.py  test_real_world.py  test_security.py  test_swarm.py  test_tool_validation.py  test_utils_text.py  test_workflow_execution.py
tests/security_test_workspace/: secrets.txt
tests/test_api/: test_auth.py  test_error_handling.py  test_health.py  test_sessions.py
tests/test_claude_integration/: __init__.py  test_agent_loader.py  test_command_execution.py  test_command_integration_e2e.py  test_command_mapper.py  test_context.py  test_rules_engine.py  test_skills_manager.py  test_utils.py
