[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "friday-ai-teammate"
version = "1.0.0"
description = "Friday AI Teammate - A powerful AI coding assistant for your terminal"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "mk-knight23", email = "mk-knight23@users.noreply.github.com"}
]
keywords = ["ai", "assistant", "cli", "coding", "agent", "llm", "terminal"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Utilities",
]
requires-python = ">=3.10"
dependencies = [
    "click>=8.0.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "openai>=1.0.0",
    "platformdirs>=4.0.0",
    "tomli>=2.0.0",
    "httpx>=0.25.0",
    "ddgs>=6.0.0",
    "fastmcp>=0.4.0",
    "tiktoken>=0.5.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "asyncpg>=0.29.0",
    "aiomysql>=0.2.0",
    "redis>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "build>=1.0.0",
    "twine>=4.0.0",
]
api = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sse-starlette>=1.6.0",
    "python-multipart>=0.0.6",
]
security = [
    "cryptography>=41.0.0",
    "keyring>=24.0.0",
]

[project.scripts]
friday = "friday_ai.main:main"
friday-api = "friday_ai.api.__main__:main"

[project.urls]
Homepage = "https://github.com/mk-knight23/Friday"
Repository = "https://github.com/mk-knight23/Friday"
Issues = "https://github.com/mk-knight23/Friday/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["friday_ai*"]

[tool.setuptools.package-data]
friday_ai = ["*.txt", "*.md"]
