[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "friday-ai-teammate"
version = "2.1.0"
description = "Friday AI Teammate - A powerful AI coding assistant for your terminal"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "mk-knight23", email = "mk-knight23@users.noreply.github.com"}
]
keywords = ["ai", "assistant", "cli", "coding", "agent", "llm", "terminal"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Utilities",
]
requires-python = ">=3.11"
dependencies = [
    "click>=8.0.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "openai>=1.0.0",
    "platformdirs>=4.0.0",
    "tomli>=2.0.0",
    "httpx>=0.25.0",
    "ddgs>=6.0.0",
    "fastmcp>=0.4.0",
    "tiktoken>=0.5.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "asyncpg>=0.29.0",
    "aiomysql>=0.2.0",
    "redis>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-benchmark>=4.0.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.25.0",
    "build>=1.0.0",
    "twine>=4.0.0",
    "black>=24.1.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]
api = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sse-starlette>=1.6.0",
    "python-multipart>=0.0.6",
]
security = [
    "cryptography>=41.0.0",
    "keyring>=24.0.0",
]
rag = [
    "sentence-transformers>=2.2.0",
    "faiss-cpu>=1.7.4",
]
k8s = [
    "kubernetes>=28.1.0",
]
voice = [
    "SpeechRecognition>=3.10.0",
    "pyttsx3>=2.90",
    "gTTS>=2.4.0",
]

[project.scripts]
friday = "friday_ai.main:main"
friday-api = "friday_ai.api.__main__:main"

[project.urls]
Homepage = "https://github.com/mk-knight23/Friday"
Repository = "https://github.com/mk-knight23/Friday"
Issues = "https://github.com/mk-knight23/Friday/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["friday_ai*"]

[tool.setuptools.package-data]
friday_ai = ["*.txt", "*.md"]

# Code Quality Tools Configuration
[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # defaults
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "rich.*",
    "tiktoken.*",
    "fastmcp.*",
    "asyncpg.*",
    "aiomysql.*",
    "redis.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers --asyncio-mode=auto --cov=friday_ai --cov-report=term-missing --cov-fail-under=80"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
]

[tool.coverage.run]
source = ["friday_ai"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
precision = 2

